Add missing file, update text and references

--- a/LJCDBServiceLib/LJCDBServiceLib/LJCDBServiceLib.csproj
+++ b/LJCDBServiceLib/LJCDBServiceLib/LJCDBServiceLib.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CipherLib">
-      <HintPath>..\..\LJCDBClientLib\External\CipherLib.dll</HintPath>
+      <HintPath>..\External\CipherLib.dll</HintPath>
     </Reference>
     <Reference Include="LJCDataAccess">
       <HintPath>..\External\LJCDataAccess.dll</HintPath>
