--- a/LJCDBServiceLib/LJCDBServiceLib/LJCDBServiceLib.csproj
+++ b/LJCDBServiceLib/LJCDBServiceLib/LJCDBServiceLib.csproj
@@ -32,7 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CipherLib">
+    <Reference Include="CipherLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\External\CipherLib.dll</HintPath>
     </Reference>
     <Reference Include="LJCDataAccess">
