--- a/LJCSQLUtilLib/DataHelper/DataHelper.csproj
+++ b/LJCSQLUtilLib/DataHelper/DataHelper.csproj
@@ -43,7 +43,8 @@
       <HintPath>..\External\LJCDataAccess.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="LJCDataDetailLib">
+    <Reference Include="LJCDataDetailLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\External\LJCDataDetailLib.dll</HintPath>
     </Reference>
     <Reference Include="LJCDBClientLib">
