--- a/LJCDBClientLib/TestObjectManager/TestObjectManager.csproj
+++ b/LJCDBClientLib/TestObjectManager/TestObjectManager.csproj
@@ -34,8 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="LJCDBDataAccess">
-      <HintPath>..\..\..\LJCProjectsDev\LJCDBServiceLib\External\LJCDBDataAccess.dll</HintPath>
+    <Reference Include="LJCDBDataAccess, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\External\LJCDBDataAccess.dll</HintPath>
     </Reference>
     <Reference Include="LJCDBMessage">
       <HintPath>..\External\LJCDBMessage.dll</HintPath>
