--- a/DataDetail/DataDetailDAL/LJCDataDetailDAL.csproj
+++ b/DataDetail/DataDetailDAL/LJCDataDetailDAL.csproj
@@ -4,15 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DC82BC52-6163-4BA8-86F1-C7101EAB0320}</ProjectGuid>
+    <ProjectGuid>{762703B7-DF03-4889-9DF1-EAB7614A97B3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LJCDataDetailLib</RootNamespace>
-    <AssemblyName>LJCDataDetailLib</AssemblyName>
+    <RootNamespace>LJCDataDetailDAL</RootNamespace>
+    <AssemblyName>LJCDataDetailDAL</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -22,7 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\LJCDataDetailLib.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\LJCDataDetailDAL.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -37,39 +36,53 @@
       <HintPath>..\External\LJCDBClientLib.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="LJCDBDataAccess">
+      <HintPath>..\External\LJCDBDataAccess.dll</HintPath>
+    </Reference>
     <Reference Include="LJCDBMessage">
-      <HintPath>..\..\LJCSQLUtilLib\External\LJCDBMessage.dll</HintPath>
+      <HintPath>..\External\LJCDBMessage.dll</HintPath>
     </Reference>
     <Reference Include="LJCNetCommon">
       <HintPath>..\External\LJCNetCommon.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataDetailCode.cs" />
-    <Compile Include="ControlCode.cs" />
+    <Compile Include="DataDetailData.cs" />
+    <Compile Include="DataDetailManagers.cs" />
+    <Compile Include="Data\ControlColumn.cs" />
+    <Compile Include="Data\ControlRow.cs" />
+    <Compile Include="Data\ControlRows.cs" />
+    <Compile Include="Data\ControlTab.cs" />
+    <Compile Include="Data\ControlDetail.cs" />
+    <Compile Include="Data\ControlTabItems.cs" />
+    <Compile Include="Data\ControlDetails.cs" />
+    <Compile Include="Data\ControlColumns.cs" />
+    <Compile Include="Manager\ControlColumnManager.cs" />
+    <Compile Include="Manager\ControlRowManager.cs" />
+    <Compile Include="Manager\ControlTabManager.cs" />
+    <Compile Include="Manager\ControlDetailManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Doc\ControlColumn.xml" />
-    <Content Include="Doc\DataDetailCode.xml" />
+    <Content Include="Doc\ControlColumnManager.xml" />
     <Content Include="Doc\ControlColumns.xml" />
-    <Content Include="Doc\ControlHelper.xml" />
-    <Content Include="Doc\ControlItems.xml" />
-    <Content Include="Doc\ControlRow.xml" />
+    <Content Include="Doc\ControlRowManager.xml" />
     <Content Include="Doc\ControlRows.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DataDetailDAL\LJCDataDetailDAL.csproj">
-      <Project>{762703b7-df03-4889-9df1-eab7614a97b3}</Project>
-      <Name>LJCDataDetailDAL</Name>
-    </ProjectReference>
+    <Content Include="Doc\ControlTabManager.xml" />
+    <Content Include="Doc\ControlTabs.xml" />
+    <Content Include="Doc\DataDetailData.xml" />
+    <Content Include="Doc\DataDetailManagers.xml" />
+    <Content Include="Doc\DetailConfigManager.xml" />
+    <Content Include="Doc\DetailConfigs.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
