--- a/DataDetail/DataDetail/DataDetail.csproj
+++ b/DataDetail/DataDetail/DataDetail.csproj
@@ -89,6 +89,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TabDetail.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TabDetail.Designer.cs">
+      <DependentUpon>TabDetail.cs</DependentUpon>
+    </Compile>
     <Content Include="bin\Debug\ConnectionTemplates.xml" />
     <Content Include="bin\Debug\DataConfigs.xml" />
     <EmbeddedResource Include="DataDetailDialog.resx">
@@ -107,6 +113,9 @@
     </Compile>
     <EmbeddedResource Include="SelectList.resx">
       <DependentUpon>SelectList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TabDetail.resx">
+      <DependentUpon>TabDetail.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
