--- a/LJCDBClientLib/LJCDBClientLib/LJCDBClientLib.csproj
+++ b/LJCDBClientLib/LJCDBClientLib/LJCDBClientLib.csproj
@@ -81,6 +81,7 @@
     <Compile Include="ObjectManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DbServiceProxy.cs" />
+    <Compile Include="StandardUISettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
