--- a/LJCRegionManager/LJCRegionDAL/LJCRegionDAL.csproj
+++ b/LJCRegionManager/LJCRegionDAL/LJCRegionDAL.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="LJCDBClientLib">
-      <HintPath>..\External\LJCDBClientLib.dll</HintPath>
+      <HintPath>..\..\..\Projects\TestUIManager\External\LJCDBClientLib.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="LJCDBMessage">
