--- a/LJCViewEditor/LJCViewEditorDAL/LJCViewEditorDAL.csproj
+++ b/LJCViewEditor/LJCViewEditorDAL/LJCViewEditorDAL.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="LJCDBClientLib">
-      <HintPath>..\External\LJCDBClientLib.dll</HintPath>
+      <HintPath>..\..\..\LJCProjectsDev\LJCViewEditor\External\LJCDBClientLib.dll</HintPath>
     </Reference>
     <Reference Include="LJCDBMessage, Version=2.2.521.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
