--- a/LJCDBViewDAL/ConsoleApp2/ConsoleApp2.csproj
+++ b/LJCDBViewDAL/ConsoleApp2/ConsoleApp2.csproj
@@ -38,7 +38,8 @@
       <HintPath>..\External\LJCDataAccessConfig.dll</HintPath>
     </Reference>
     <Reference Include="LJCDBClientLib">
-      <HintPath>..\External\LJCDBClientLib.dll</HintPath>
+      <HintPath>..\..\..\LJCProjectsDev\LJCDBViewDAL\External\LJCDBClientLib.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="LJCDBDataAccess">
       <HintPath>..\External\LJCDBDataAccess.dll</HintPath>
