--- a/LJCRegionManager/LJCRegionManager/LJCRegionManager.csproj
+++ b/LJCRegionManager/LJCRegionManager/LJCRegionManager.csproj
@@ -39,7 +39,8 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="LJCDBClientLib">
-      <HintPath>..\External\LJCDBClientLib.dll</HintPath>
+      <HintPath>..\..\..\Projects\TestUIManager\External\LJCDBClientLib.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="LJCDBDataAccess">
       <HintPath>..\External\LJCDBDataAccess.dll</HintPath>
