--- a/SampleApps/LJCRegionManager/LJCRegionForm/LJCRegionForm.csproj
+++ b/SampleApps/LJCRegionManager/LJCRegionForm/LJCRegionForm.csproj
@@ -98,6 +98,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bin\Debug\ConnectionTemplates.xml" />
+    <Content Include="bin\Debug\DataConfigs.xml" />
     <Content Include="Doc\ProjectRegionForm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
