--- a/CoreAssemblies/LJCDBClientSQLLib/LJCDBClientSQLLib/LJCDBClientSQLLib.csproj
+++ b/CoreAssemblies/LJCDBClientSQLLib/LJCDBClientSQLLib/LJCDBClientSQLLib.csproj
@@ -4,14 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A832C34F-D731-4A9E-9617-CE1E0CAF35FB}</ProjectGuid>
+    <ProjectGuid>{8218AB9B-CA8D-469F-A1BF-EB65DD18E3A0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LJCDBClientLib</RootNamespace>
-    <AssemblyName>LJCDBClientLib</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <RootNamespace>LJCDBClientSQLLib</RootNamespace>
+    <AssemblyName>LJCDBClientSQLLib</AssemblyName>
+    <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,7 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\LJCDBClientLib.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,9 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CipherLib">
-      <HintPath>..\External\CipherLib.dll</HintPath>
-    </Reference>
     <Reference Include="LJCDataAccess">
       <HintPath>..\External\LJCDataAccess.dll</HintPath>
       <Private>False</Private>
@@ -42,15 +38,11 @@
     <Reference Include="LJCDataAccessConfig">
       <HintPath>..\External\LJCDataAccessConfig.dll</HintPath>
     </Reference>
-    <Reference Include="LJCDBDataAccess, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\External\LJCDBDataAccess.dll</HintPath>
+    <Reference Include="LJCDBClientLib">
+      <HintPath>..\External\LJCDBClientLib.dll</HintPath>
     </Reference>
     <Reference Include="LJCDBMessage">
       <HintPath>..\External\LJCDBMessage.dll</HintPath>
-    </Reference>
-    <Reference Include="LJCDBServiceLib">
-      <HintPath>..\External\LJCDBServiceLib.dll</HintPath>
     </Reference>
     <Reference Include="LJCGridDataLib">
       <HintPath>..\External\LJCGridDataLib.dll</HintPath>
@@ -60,8 +52,6 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -70,46 +60,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DbManager.cs" />
-    <Compile Include="ManagerCommon.cs" />
-    <Compile Include="ChangedNames.cs" />
-    <Compile Include="DataManager.cs" />
-    <Compile Include="DbServiceRef.cs" />
-    <Compile Include="IDataManager.cs" />
-    <Compile Include="ObjectManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DbServiceProxy.cs" />
     <Compile Include="SQLManager.cs" />
-    <Compile Include="StandardUISettings.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="Diagrams\Configuration.cd" />
-    <None Include="Diagrams\DataMethods.cd" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Diagrams\Configuration.html" />
-    <Content Include="Diagrams\Configuration.jpg" />
-    <Content Include="Diagrams\DataMethods.html" />
-    <Content Include="Diagrams\DataMethods.jpg" />
-    <Content Include="Doc\ChangedNames.xml" />
-    <Content Include="Doc\DataManager.xml">
-      <SubType>Designer</SubType>
-    </Content>
-    <Content Include="Doc\DbManager.xml" />
-    <Content Include="Doc\DbServiceProxy.xml" />
-    <Content Include="Doc\DbServiceRef.xml">
-      <SubType>Designer</SubType>
-    </Content>
-    <Content Include="Doc\ManagerCommon.xml" />
-    <Content Include="Doc\Names.txt" />
-    <Content Include="Doc\ObjectManager.xml">
-      <SubType>Designer</SubType>
-    </Content>
-    <Content Include="Doc\ProjectDBClientLib.xml">
-      <SubType>Designer</SubType>
-    </Content>
-    <Content Include="Doc\SQLManager.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
