--- a/CoreUtilities/LJCDocLib/LJCDocLibDAL/LJCDocLibDAL.csproj
+++ b/CoreUtilities/LJCDocLib/LJCDocLibDAL/LJCDocLibDAL.csproj
@@ -91,6 +91,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="bin\Debug\SQLScript\10sp_DCAddUnique.sql" />
+    <Content Include="bin\Debug\SQLScript\11DCLJCDBMessage.sql" />
+    <Content Include="bin\Debug\SQLScript\11DCLJCWinFormControls.sql" />
     <Content Include="bin\Debug\SQLScript\12sp_DMGHAddUnique.sql" />
     <Content Include="bin\Debug\SQLScript\14sp_DMGAddUnique.sql" />
     <Content Include="bin\Debug\SQLScript\15DMG_NetCommon.sql" />
@@ -105,7 +107,7 @@
     <Content Include="bin\Debug\SQLScript\6sp_DCGHAddUnique.sql" />
     <Content Include="bin\Debug\SQLScript\8sp_DCGAddUnique.sql" />
     <Content Include="bin\Debug\SQLScript\9DocClassGroup.sql" />
-    <Content Include="bin\Debug\SQLScript\11DocClass.sql" />
+    <Content Include="bin\Debug\SQLScript\11DCLJCNetCommon.sql" />
     <Content Include="bin\Debug\SQLScript\13DocMethodGroupHeading.sql" />
     <Content Include="Doc\DocGenAssemblies.xml" />
     <Content Include="Doc\DocGenAssembly.xml" />
